# rhizomatic

./: CLAUDE.md  PROGRESS.md  README.md
.claude/: launch.json
.github/workflows/: ci.yml
apps/chorus/: CONSTELLATION.md  PERSISTENCE.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
apps/chorus/src/: adjudicator.ts  agent.ts  briefing.ts  concepts.ts  console.ts  decisions.ts  demo.ts  discovery.ts  gql.ts  identity.ts  (+14 more)
docs/: agents.html  index.html  playground.html  tour.bundle.js  tour.html
implementations/rust/: Cargo.toml
implementations/rust/src/: cbor.rs  eval.rs  hview.rs  lib.rs  materialize.rs  policy.rs  pred.rs  reactor.rs  schema.rs  term_json.rs
implementations/rust/tests/: cbor.rs  eval.rs  hview.rs  resolve.rs  txn.rs
implementations/ts/: package.json  tsconfig.json
skills/: README.md  build-skills.mjs
skills/chorus-skill-designer/: SKILL.md
skills/decision-journal/: README.md  SKILL.md  chorus.md
skills/media-log/: README.md  SKILL.md  chorus.md
skills/synchronicity-journal/: README.md  SKILL.md  chorus.md
spec/: 01-delta.ERRATA.md  01-delta.md  02-operators.ERRATA.md  02-operators.md  03-schema.md  04-reactor.ERRATA.md  04-reactor.md  05-resolution.ERRATA.md  06-federation.ERRATA.md  06-federation.md  07-derivation.ERRATA.md  07-derivation.md  08-storage.ERRATA.md  08-storage.md  11-federation-as-query.NOTE.md  12-instances-provenance-privacy.NOTE.md  ERRATA-REVIEW.md
tools/: check-all.mjs
vectors/l0-delta/: cbor-primitives.json  deltas.json
vectors/l1-eval/: eval-hview.json  eval-resolve.json
(+50 files in other folders)
