[package]
name = "rhizomatic"
version = "0.0.0"
edition = "2021"
description = "Rhizomatic reference implementation (Rust) — one of two parallel witnesses to the spec."
publish = false

[dependencies]
blake3 = "1"
hex = "0.4"
# float_roundtrip is REQUIRED: without it serde_json's fast float path can parse decimal
# numbers up to 1 ULP off, which fractures canonical-bytes parity with JS (caught by the
# float-f16-min-subnormal vector). See ERRATA "JSON debug profile".
serde_json = { version = "1", features = ["float_roundtrip"] }
unicode-normalization = "0.1"
